# T-Rexop

./: README.md  pyproject.toml
src/trex/: __init__.py
